adding some logging and start writing javadoc

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 	<name>messaging</name>
 
 	<properties>
+		<logger.version>1.0.0</logger.version>
 	</properties>
 
 	<scm>
@@ -41,6 +42,12 @@
 			<artifactId>testng</artifactId>
 			<version>${testng.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>se.uu.ub.cora</groupId>
+			<artifactId>logger</artifactId>
+			<version>${logger.version}</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
