--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	</parent>
 
 	<artifactId>messaging</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<build>
 		<finalName>cora-${project.artifactId}-${project.version}</finalName>
@@ -33,7 +33,7 @@
 		<connection>scm:git:https://github.com/lsu-ub-uu/cora-messaging.git</connection>
 		<developerConnection>scm:git:https://github.com/lsu-ub-uu/cora-messaging.git</developerConnection>
 		<url>https://github.com/lsu-ub-uu/cora-messaging.git</url>
-	  <tag>messaging-1.0.0</tag>
+	  <tag>release/1.0</tag>
   </scm>
 
 	<dependencies>
