--- a/pom.xml
+++ b/pom.xml
@@ -14,15 +14,12 @@
 	<parent>
 		<groupId>se.uu.ub.cora</groupId>
 		<artifactId>cora-parent</artifactId>
-		<version>0.10-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<artifactId>messaging</artifactId>
 	<version>1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<build>
-		<finalName>cora-${project.artifactId}-${project.version}</finalName>
-	</build>
 	<name>messaging</name>
 
 	<properties>
