--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	</parent>
 
 	<artifactId>messaging</artifactId>
-	<version>x.y-SNAPSHOT</version>
+	<version>2.3-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>messaging</name>
 
